[gd_scene load_steps=23 format=2]

[ext_resource path="res://Entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://miniGames/Collect_money/assets_collect_money/descarga.jpg" type="Texture" id=3]
[ext_resource path="res://miniGames/Collect_money/Collect_money_Player.gd" type="Script" id=4]
[ext_resource path="res://miniGames/Collect_money/Money.tscn" type="PackedScene" id=5]
[ext_resource path="res://miniGames/Collect_money/Collect_Money.gd" type="Script" id=6]
[ext_resource path="res://miniGames/Collect_money/Money_Spawner.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://miniGames/Collect_money/sounds/mario-coin-fx-8-bit_F_major.wav" type="AudioStream" id=9]
[ext_resource path="res://miniGames/Collect_money/sounds/retro-16-bit-fx-zap_E_minor.wav" type="AudioStream" id=10]
[ext_resource path="res://miniGames/Collect_money/sounds/progressive-music-loop_B_major.wav" type="AudioStream" id=11]
[ext_resource path="res://miniGames/Collect_money/assets_collect_money/carrito.png" type="Texture" id=12]
[ext_resource path="res://miniGames/Collect_money/collect_money_GUI.gd" type="Script" id=13]
[ext_resource path="res://scenes/menu/pause/Pause.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/menu/nowLoading/NowLoading.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 23
outline_size = 3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 23
outline_size = 3
outline_color = Color( 0.996078, 0.996078, 0.996078, 1 )
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.5862, 30.079 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 320 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 518.569, 26.0812 )

[node name="Collect_Money" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" parent="." instance=ExtResource( 2 )]
script = ExtResource( 13 )

[node name="Name" parent="GUI" index="0"]
custom_fonts/font = SubResource( 1 )

[node name="Money" parent="GUI" index="1"]
custom_fonts/font = SubResource( 2 )

[node name="Shops" parent="GUI" index="2"]
visible = false

[node name="EarningMoney" type="Label" parent="GUI"]
margin_left = 112.0
margin_top = 40.0
margin_right = 152.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.109804, 0.94902, 0.0627451, 1 )
text = "GANE "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseMoney" type="Label" parent="GUI"]
margin_left = 112.0
margin_top = 40.0
margin_right = 152.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.956863, 0.223529, 0.0509804, 1 )
custom_colors/font_outline_modulate = Color( 0.937255, 0.780392, 0.780392, 1 )
text = "PERDI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NowLoading" parent="GUI" instance=ExtResource( 15 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 328 )
script = ExtResource( 4 )

[node name="Sprite" parent="Player" index="0"]
position = Vector2( -20.9954, 145.309 )
scale = Vector2( 2.81221, 3.08182 )
animation = "right"
frame = 2

[node name="CollisionShape2D" parent="Player" index="1"]
position = Vector2( -19.307, 150.079 )

[node name="Camera2D" parent="Player" index="2"]
visible = false
position = Vector2( -8, 8 )
current = false
zoom = Vector2( 0.5, 0.5 )
script = null

[node name="cart" type="Sprite" parent="Player"]
position = Vector2( 56, 168 )
scale = Vector2( 0.410202, 0.304062 )
texture = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="Player/cart"]
position = Vector2( 78.0103, -394.656 )
scale = Vector2( 2.82787, 3.2888 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/cart/Area2D"]
position = Vector2( -27.5862, 112 )
shape = SubResource( 5 )

[node name="coinIn" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 9 )
attenuation = 0.000410594

[node name="coinUut" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 10 )

[node name="Money_Spawner" type="Node" parent="."]
script = ExtResource( 7 )
money_scene = ExtResource( 5 )

[node name="boders" type="Node" parent="."]

[node name="border_left" type="StaticBody2D" parent="boders"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boders/border_left"]
polygon = PoolVector2Array( 0, 592, 0, -8, -64, -8, -64, 608 )

[node name="border_right" type="StaticBody2D" parent="boders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boders/border_right"]
position = Vector2( 1056, 328 )
shape = SubResource( 6 )

[node name="flat" type="Area2D" parent="boders/border_right"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boders/border_right/flat"]
position = Vector2( 508.613, 574.091 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="PausePopup" parent="." instance=ExtResource( 14 )]
[connection signal="pause" from="Player" to="PausePopup" method="_on_Player_pause"]
[connection signal="body_entered" from="Player/cart/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="boders/border_right/flat" to="." method="_on_flat_body_entered"]
[connection signal="tree_entered" from="boders/border_right/flat/CollisionShape2D" to="." method="_on_CollisionShape2D_tree_entered"]
[connection signal="exit" from="PausePopup" to="." method="_on_PausePopup_exit"]
[connection signal="exit" from="PausePopup" to="GUI/NowLoading" method="_on_PausePopup_exit"]

[editable path="GUI"]

[editable path="Player"]
